# context-core

./: Cargo.toml  LICENSE  Makefile  NOTICE  README.md  progress.md  spec_refs.md
src/: lib.rs
src/cache/: cache.rs  invalidation.rs  mod.rs  versioning.rs
src/compression/: summarizer.rs
src/document/: document.rs  metadata.rs  mod.rs  parser.rs
src/selection/: budgeting.rs  filters.rs  mod.rs  ranking.rs
src/types/: context_bundle.rs  identifiers.rs  mod.rs
tests/: cache_invariants.rs  cache_lifecycle.rs  cache_manifest.rs  context_selection.rs  determinism.rs  document_model.rs  end_to_end_golden.rs  golden_selection_contract.rs  golden_selection_logic.rs  golden_serialization.rs  selection_invariants.rs  selection_logic.rs
