[package]
name = "context-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
description = "Deterministic context selection engine for AI agents and LLMs"
repository = "https://github.com/contextenginehq/context-core"
homepage = "https://github.com/contextenginehq/context-engine"
documentation = "https://docs.rs/context-core"
readme = "README.md"
keywords = ["context", "retrieval", "deterministic", "mcp", "llm"]
categories = ["algorithms", "text-processing"]

include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "NOTICE",
]

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }

[dev-dependencies]
tempfile = "3.24.0"

[features]
default = []
